--- a/rx/_PageStart.cshtml
+++ b/rx/_PageStart.cshtml
@@ -18,7 +18,7 @@
         AppState["DB_Name"] = "rxRazorAzure";
     }
     
-    data_set = _SETDB.setApp();
+    data_set = _SetDB.setApp();
 
     foreach (string key in data_set.Keys)
     {
