--- a/rx/layouts/gallery1/zone.cshtml
+++ b/rx/layouts/gallery1/zone.cshtml
@@ -50,7 +50,7 @@
     //////////////////////////////////////////////////////////
     ///// Top File Rendering
     //////////////////////////////////////////////////////////
-    @RenderPage("../../" + g["path_layout"] + d_layout["dir"] + "/_cross/top.cshtml", g, my, r, s, _HP, _CA, d_layout, LAYOUT_ARR, _HS, c, _HM, system)
+    @RenderPage("../../" + g["path_layout"] + d_layout["dir"] + "/_cross/top.cshtml", g, my, r, s, _HP, _CA, _HS, d_layout, LAYOUT_ARR, c, _HM, system)
 
     <div id="content">
     <div class="contentbody">
