--- a/rx/layouts/classic2/_cross/_main.cshtml
+++ b/rx/layouts/classic2/_cross/_main.cshtml
@@ -1,14 +1,12 @@
 ﻿@{
     /*****************************************************************
     //
-    //// Programmed by SungHO Kim (Migration: TaiHyung Kim, YoonAh Sim)
+    //// Programmed by SungHO Kim (Migration: YoonA Shim, TaiHyung Kim)
     // KimsQ-Rx (for Microsoft ASP.NET WebPages)
     // Copyrights © Redblock Allrights Reserved. Powered by kimsQ-Rx
     // Since 2011.
     //
     *****************************************************************/
-    
-
     var g = PageData[0];
     var my = PageData[1];
     var r = PageData[2];
@@ -17,7 +15,7 @@
     var _CA = PageData[5];
     var _HS = PageData[6];
     var d_layout = PageData[7];
-    var LAYOUT_ARR = PageData[8];
+    var LAYOUT_ARR = PageData[8];    
     
     dynamic date = _System.GetVDate(_HS["timecal"]);
     string _RCD = null;
