--- a/rx/layouts/classic2/zone.cshtml
+++ b/rx/layouts/classic2/zone.cshtml
@@ -50,7 +50,7 @@
     //////////////////////////////////////////////////////////
     ///// Top File Rendering
     //////////////////////////////////////////////////////////
-    @RenderPage("../../" + g["path_layout"] + d_layout["dir"] + "/_cross/top.cshtml", g, my, r, s, _HP, _CA, d_layout, LAYOUT_ARR, _HS, _HM, system)    
+    @RenderPage("../../" + g["path_layout"] + d_layout["dir"] + "/_cross/top.cshtml", g, my, r, s, _HP, _CA, _HS, d_layout, LAYOUT_ARR)       
 
     <div id="content" class="wrap">
         @RenderPage("../../" + g["path_core"] + "engine/container_head.engine.cshtml", g, _HM, system)
