--- a/rx/layouts/classic3/_cross/_main.cshtml
+++ b/rx/layouts/classic3/_cross/_main.cshtml
@@ -1,14 +1,12 @@
 ﻿@{
     /*****************************************************************
     //
-    //// Programmed by SungHO Kim (Migration: TaiHyung Kim, YoonAh Sim)
+    //// Programmed by SungHO Kim (Migration: YoonA Shim, TaiHyung Kim)
     // KimsQ-Rx (for Microsoft ASP.NET WebPages)
     // Copyrights © Redblock Allrights Reserved. Powered by kimsQ-Rx
     // Since 2011.
     //
     *****************************************************************/
-    
-
     var g = PageData[0];
     var my = PageData[1];
     var r = PageData[2];
@@ -17,7 +15,7 @@
     var _CA = PageData[5];
     var _HS = PageData[6];
     var d_layout = PageData[7];
-    var LAYOUT_ARR = PageData[8];
+    var LAYOUT_ARR = PageData[8];    
 
     dynamic date = _System.GetVDate(_HS["timecal"]);
     dynamic _R = null;
@@ -149,7 +147,7 @@
 		<div class="tl">
             @if(LAYOUT_ARR["bbs2"] != "0")
             {
-                var _B = _DB.GetDbData_M(AppState["table_bbslist"].ToString(), "uid=" + LAYOUT_ARR["bbs2"]);
+                var _B = _DB.getDbData(AppState["table_bbslist"], "uid=" + LAYOUT_ARR["bbs2"], "*");
                 string[] _sort = LAYOUT_ARR["sort2"].Split(delimiter);
                 int bbs2_num = 0;
                 
@@ -224,7 +222,8 @@
         <div class="tr">
             @if(LAYOUT_ARR["bbs3"] != "0")
             {
-                var _B = _DB.GetDbData_M(AppState["table_bbslist"].ToString(), "uid=" + LAYOUT_ARR["bbs3"]);
+                var _B = _DB.getDbData(AppState["table_bbslist"], "uid=" + LAYOUT_ARR["bbs3"], "*");
+                
                 string[] _sort = LAYOUT_ARR["sort3"].Split(delimiter);
                 int bbs3_num = 0;
                 
