--- a/rx/layouts/classic3/main.cshtml
+++ b/rx/layouts/classic3/main.cshtml
@@ -30,19 +30,19 @@
     var date = PageData[18];
     var referer = PageData[19];
         
-    dynamic LAYOUT_ARR = _DB.Get_code_layout(d_layout["dir"]);
+    var LAYOUT_ARR = _DB.Get_code_layout(d_layout["dir"]);
 
     //////////////////////////////////////////////////////////
     ///// Top File Rendering
     //////////////////////////////////////////////////////////
-    @RenderPage("../../" + g["path_layout"] + d_layout["dir"] + "/_cross/top.cshtml", g, my, r, s, _HP, _CA, d_layout, LAYOUT_ARR, _HS, _HM, system)
+    @RenderPage("../../" + g["path_layout"] + d_layout["dir"] + "/_cross/top.cshtml", g, my, r, s, _HP, _CA, _HS, d_layout, LAYOUT_ARR, _HM, system)
 }
 
 <div id="content">
 @if(d_layout["_is_ownmain"] == "1")
 {
     if(LAYOUT_ARR["begin"] == "0" || LAYOUT_ARR["begin"] == "") {
-        @RenderPage("../../" + g["path_layout"] + d_layout["dir"] + "/_cross/_begin.cshtml", g, my, r, s, _HP, _CA, d_layout, LAYOUT_ARR)            
+        @RenderPage("../../" + g["path_layout"] + d_layout["dir"] + "/_cross/_begin.cshtml", g, my, r, s, _HP, _CA, _HS, d_layout, LAYOUT_ARR)
     }
     else
     {
