--- a/rx/layouts/gallery1/main.cshtml
+++ b/rx/layouts/gallery1/main.cshtml
@@ -33,7 +33,7 @@
     var type = Request["type"];
     var cat = Request["cat"];
 
-    dynamic LAYOUT_ARR = _DB.Get_code_layout(d_layout["dir"]);
+    var LAYOUT_ARR = _DB.Get_code_layout(d_layout["dir"]);
     
     System.Collections.ArrayList ctarr = new System.Collections.ArrayList();
     System.Collections.ArrayList CXA = new System.Collections.ArrayList();
@@ -57,7 +57,7 @@
     //////////////////////////////////////////////////////////
     ///// Top File Rendering
     //////////////////////////////////////////////////////////
-    @RenderPage("../../" + g["path_layout"] + d_layout["dir"] + "/_cross/top.cshtml", g, my, r, s, _HP, _CA, d_layout, LAYOUT_ARR, _HS, c, _HM, system)
+    @RenderPage("../../" + g["path_layout"] + d_layout["dir"] + "/_cross/top.cshtml", g, my, r, s, _HP, _CA, _HS, d_layout, LAYOUT_ARR, c, _HM, system)
 }
 
 <div id="content">
@@ -67,7 +67,7 @@
     
     if (LAYOUT_ARR["begin"] == "0" || LAYOUT_ARR["begin"] == "")
     {
-        @RenderPage("../../" + g["path_layout"] + d_layout["dir"] + "/_cross/_begin.cshtml", g, my, r, s, _HP, _CA, d_layout, LAYOUT_ARR)            
+        @RenderPage("../../" + g["path_layout"] + d_layout["dir"] + "/_cross/_begin.cshtml", g, my, r, s, _HP, _CA, _HS, d_layout, LAYOUT_ARR)           
     }
 }
 
