--- a/rx/layouts/gallery2/_cross/_begin.cshtml
+++ b/rx/layouts/gallery2/_cross/_begin.cshtml
@@ -1,11 +1,26 @@
 ﻿@{
+    /*****************************************************************
+    //
+    //// Programmed by SungHO Kim (Migration: YoonA Shim, TaiHyung Kim)
+    // KimsQ-Rx (for Microsoft ASP.NET WebPages)
+    // Copyrights © Redblock Allrights Reserved. Powered by kimsQ-Rx
+    // Since 2011.
+    //
+    *****************************************************************/
     var g = PageData[0];
-    var d_layout = PageData[8];
+    var my = PageData[1];
+    var r = PageData[2];
+    var s = PageData[3];
+    var _HP = PageData[4];
+    var _CA = PageData[5];
+    var _HS = PageData[6];
+    var d_layout = PageData[7];
+    var LAYOUT_ARR = PageData[8];
 }
 <div class="beginguide">
 	<div class="title">무한한 가능성! 킴스큐Rx 에 오신 것을 환영합니다.</div>
 	<p>
-		이 화면은 킴스큐를 처음 설치하셨거나 이 레이아웃(@_System.getFolderName(g["path_layout"] + d_layout["dir"]):@d_layout["dir"])을 처음 사용하시는 경우에 나타납니다.<br />
+		이 화면은 킴스큐를 처음 설치하셨거나 이 레이아웃(@_System.getFolderName(g["path_root_ps"] + g["path_layout"] + d_layout["dir"]):@d_layout["dir"])을 처음 사용하시는 경우에 나타납니다.<br />
 		레이아웃 설정페이지에서 셋팅을 하시면 더 이상 이 화면은 나타나지 않게 됩니다.<br />
 		레이아웃 설정방법은 킴스큐Rx 공식사이트(www.kimsq.com)의 사용자매뉴얼을 참고해 주세요.<br /><br />
 		<span class="b">킴스큐를 처음 설치하셨다면 다음의 순서대로 셋팅해 보세요.</span>
